--- a/src/about.html
+++ b/src/about.html
@@ -1011,7 +1011,7 @@
               <i
                 style="
                   font-family: 'Times New Roman', Times, serif;
-                  font-size: medium;
+                  font-size: small;
                 "
                 >Delivery Service</i
               >
@@ -1046,7 +1046,7 @@
               <i
                 style="
                   font-family: 'Times New Roman', Times, serif;
-                  font-size: medium;
+                  font-size: small;
                 "
                 >Delivery Service</i
               >
@@ -1082,7 +1082,7 @@
               <i
                 style="
                   font-family: 'Times New Roman', Times, serif;
-                  font-size: medium;
+                  font-size: small;
                 "
                 >Delivery Service</i
               >
