--- a/src/about.html
+++ b/src/about.html
@@ -5,9 +5,9 @@
     <link
       rel="icon"
       type="image/png"
-      href="img/Screenshot 2025-06-27 221226.png"
+      href="img/logo.png"
     />
-    <title>About - Baggage, Mobile Locker</title>
+    <title>About - NEEDS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap"
