--- a/src/add-info/feedback.html
+++ b/src/add-info/feedback.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Feedback</title>
+    <link rel="icon" type="image/png" href="../img/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <style>
   :root {
