--- a/src/faq.html
+++ b/src/faq.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-      <link rel="icon" type="image/png" href="img/Screenshot 2025-06-27 221226.png" />
-    <title>FAQ - Baggage Mobile Locker</title>
+      <link rel="icon" type="image/png" href="img/logo.png" />
+    <title>FAQ - NEEDS</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
