--- a/src/groceries.html
+++ b/src/groceries.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
   <link rel="icon" type="image/png" href="img/logo.png" />
-    <title>FOODS - Groceries</title>
+    <title>NEEDS - Groceries</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
