--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@ a:hover {
 </head>
 <body>
   <div class="container">
-    <h1>Contact Me</h1>
+    <h1>Contact YapVerse</h1>
     <p>If you'd like to get in touch, use the details below:</p>
 
     <div class="contact-info">
