--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Contact | Your Name</title>
+  <title>Contact | YapVerse</title>
+  <link rel="icon" type="image/png" href="/src/img/logo.png" />
   <style>
     body {
   font-family:'Times New Roman', Times, serif;
