--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Hello There!</title>
+    <link rel="icon" type="image/png" href="/src/img/logo.png" />
     <style>
       main {
         margin-top: 100px;
